--- a/centra-client/src/CSS/tweaks.css
+++ b/centra-client/src/CSS/tweaks.css
@@ -187,3 +187,14 @@ main {
 .fa-chart-line {
   font-size: 50px;
 }
+.material-icons{
+  display: inline-flex;
+  vertical-align: top;
+}
+
+.certficates{
+  width: 50px;
+  height:50px;
+  margin:10px;
+  background-color: white;
+}
