--- a/centra-client/src/App.css
+++ b/centra-client/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+h1,h2,h3,h4{
+ font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h5,h6,p,a,span,input{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
