--- a/centra-client/src/App.css
+++ b/centra-client/src/App.css
@@ -38,7 +38,7 @@
 }
 
 h1,h2,h3,h4{
- font-family: Verdana, Geneva, Tahoma, sans-serif;
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h5,h6,p,a,span,input{
